# init_sol_heur_cbct

./: .gitignore  CMakeLists.txt  LICENSE  README.md  app.cpp
hill_climbing/: CMakeLists.txt  hill_climbing.cpp  hill_climbing.h
plant_prop/: CMakeLists.txt  plant_prop.cpp  plant_prop.h
random_sampling/: CMakeLists.txt  random_sampling.cpp  random_sampling.h
results/accept_reject_rs/: solutionset1.csv  solutionset10.csv  solutionset11.csv  solutionset12.csv  solutionset13.csv  solutionset14.csv  solutionset16.csv  solutionset17.csv  solutionset18.csv  solutionset19.csv  solutionset2.csv  solutionset20.csv  solutionset21.csv  solutionset3.csv  solutionset4.csv  solutionset5.csv  solutionset6.csv  solutionset7.csv  solutionset8.csv  solutionset9.csv
results/direct_rs/: solutionset1.csv  solutionset11.csv
results/hill_climb/: hillclimb_dataset_aggregated_results.csv  hillclimb_dataset_improvements.csv
results/plant_prop/: plant_prop_results.csv
results/random_sampling/: random_sampling_statistics.csv
results/simple_rs/: solutionset1.csv  solutionset10.csv  solutionset11.csv  solutionset12.csv  solutionset13.csv  solutionset14.csv  solutionset15.csv  solutionset16.csv  solutionset17.csv  solutionset18.csv  solutionset19.csv  solutionset2.csv  solutionset20.csv  solutionset21.csv  solutionset3.csv  solutionset4.csv  solutionset5.csv  solutionset6.csv  solutionset7.csv  solutionset8.csv  solutionset9.csv
simulated_annealing/: CMakeLists.txt  simulated_annealing.cpp  simulated_annealing.h
validator/: CMakeLists.txt  validator.cpp  validator.h
(+1 files in other folders)
